# temp_sensor

./: .gitignore  CMakeLists.txt  Readme.md
include/app/: TemperatureMonitor.hpp
include/common/: Error.hpp  Result.hpp
include/drivers/: FakeTemperatureSensor.hpp  ITemperatureSensor.hpp
include/filters/: MovingAverage.hpp
include/platform/: ILogger.hpp  StdoutLogger.hpp
src/: main.cpp
src/app/: TemperatureMonitor.cpp
src/drivers/: FakeTemperatureSensor.cpp
src/platform/: StdoutLogger.cpp
